# fcn_semantic_segmentator

./: README.md  params.py  pyproject.toml
fcn_semantic_segmentator/: preprocess.py  test.py  train.py  utils.py
